# mosquitto

./: .gitignore  CMakeLists.txt  config.mk
include/mosquitto/: embedded_broker.h
lib/: net_mosq.c
src/: CMakeLists.txt  Makefile  embedd-broker-macos.syms  embedd_broker.c  main.c  mosquitto.c  mosquitto_broker_internal.h  net.c  signals.c
